# slack_claude_code

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  SLACK_SETUP.md  channel_configs.json.sample  claude_code_message_notifier.py  claude_code_processor.py  configuration_manager.py  logging_manager.py  message_test.py  message_utils.py  pyproject.toml  requirements.txt  slack_message_handler.py  slack_monitor.py  system_prompt.md.sample
